@@ -183,7 +183,6 @@ unset IFS
 
 # figure out which class to run
 if [ "$COMMAND" = "shell" ] ; then
-  # CLASS="org.jruby.Main --command irb -r${HBASE_HOME}/bin/hirb.rb"
   CLASS="org.jruby.Main ${HBASE_HOME}/bin/hirb.rb"
 elif [ "$COMMAND" = "master" ] ; then
   CLASS='org.apache.hadoop.hbase.master.HMaster'
