@@ -360,26 +360,10 @@ operator|.
 name|clone
 argument_list|()
 expr_stmt|;
-name|this
-operator|.
-name|rootregion
-operator|=
-name|Bytes
-operator|.
-name|equals
+name|setMetaFlags
 argument_list|(
 name|name
-argument_list|,
-name|HConstants
-operator|.
-name|ROOT_TABLE_NAME
 argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|metaregion
-operator|=
-literal|true
 expr_stmt|;
 for|for
 control|(
@@ -449,10 +433,21 @@ index|[]
 name|name
 parameter_list|)
 block|{
+name|setMetaFlags
+argument_list|(
+name|name
+argument_list|)
+expr_stmt|;
 name|this
 operator|.
 name|name
 operator|=
+name|this
+operator|.
+name|metaregion
+condition|?
+name|name
+else|:
 name|isLegalTableName
 argument_list|(
 name|name
@@ -469,6 +464,54 @@ argument_list|(
 name|this
 operator|.
 name|name
+argument_list|)
+expr_stmt|;
+block|}
+comment|/*    * Set meta flags on this table.    * Called by constructors.    * @param name    */
+specifier|private
+name|void
+name|setMetaFlags
+parameter_list|(
+specifier|final
+name|byte
+index|[]
+name|name
+parameter_list|)
+block|{
+name|this
+operator|.
+name|rootregion
+operator|=
+name|Bytes
+operator|.
+name|equals
+argument_list|(
+name|name
+argument_list|,
+name|HConstants
+operator|.
+name|ROOT_TABLE_NAME
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|metaregion
+operator|=
+name|this
+operator|.
+name|rootregion
+condition|?
+literal|true
+else|:
+name|Bytes
+operator|.
+name|equals
+argument_list|(
+name|name
+argument_list|,
+name|HConstants
+operator|.
+name|META_TABLE_NAME
 argument_list|)
 expr_stmt|;
 block|}
